stopping wrapping of words in flashcard menu

--- a/src/components/Flashcards.module.css
+++ b/src/components/Flashcards.module.css
@@ -88,6 +88,7 @@
   justify-content: center;
   align-items: center;
   gap: 1.5em;
+  white-space: nowrap;
 }
 
 .settingBtn {
